Updated UI and optimized JavaScript

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Meelad Raza">
     <title>Sum Calculation</title>
     <style>
         body {
@@ -13,6 +14,7 @@
             align-items: center;
             height: 97vh;
             background: linear-gradient(135deg, #667eea, #764ba2);
+            flex-direction: column;
         }
 
         .container {
@@ -63,9 +65,16 @@
             margin-bottom: 20px;
             font-size: 24px;
         }
+        p {
+            font-size: 30px;
+            text-align: center;
+            padding: 0px 25px 30px;
+            max-width: 500px;
+        }
     </style>
 
 <body>
+    <p>Created by <strong>Meelad Raza</strong></p>
     <div class="container">
         <h2>Sum Calculator</h2>
         <input type="number" id="num1" placeholder="Enter First Number">
